# Programming-C

./: README.md
semestr2/lab8/tests/: test_cmocka.c
semestr2/typefusion/: 123Calc.xls  123Calc.xml  CMakeLists.txt  LibreOffice Calc.ods  copymain.c  main  main.c  main.h  rezerv  rezerv.c  stats.txt  words2.txt
semestr2/typefusion/include/: stats.txt  words3.txt
semestr2/typefusion/src/: CMakeLists.txt  game_utils.c  game_utils.h  main.c  main.h
semestr2/typefusion/tests/: CMakeLists.txt  test_main.c
